Add view helper for seconds formatting

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -32,8 +32,8 @@
               </div>
               
               <div class="bg-slate-50 rounded-lg p-3 text-center">
-                <div class="font-bold text-slate-700"><%= activity.strava_id %></div>
-                <div class="text-xs text-slate-600">Strava ID</div>
+                <div class="font-bold text-slate-700"><%= format_duration(activity.elapsed_time) %></div>
+                <div class="text-xs text-slate-600">duration</div>
               </div>
             </div>
             
