--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="app-container">
+<div class="app-container-form">
   <div class="stack-lg">
     <header class="text-center stack-sm">
       <div class="flex items-center justify-between mb-4">
