--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,4 +1,4 @@
-<div class="app-container max-w-5xl mx-auto">
+<div class="app-container-wide">
   <% if notice.present? %>
     <p class="mb-6 inline-flex items-center rounded-md bg-green-50 px-3 py-2 text-sm font-medium text-green-700 ring-1 ring-inset ring-green-200" id="notice"><%= notice %></p>
   <% end %>
