Fix edit and delete buttons in training plan show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
       </div>
     </nav>
 
-    <main class="flex-1 app-container-wide py-12 relative">
+    <main class="flex-1 py-12 relative">
       <%= yield %>
     </main>
   </body>
