Address PR fixes and test robustness

--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,5 @@
 <div class="app-container-form">
-  <div class="max-w-4xl mx-auto px-4 spacey-y-8">
+  <div class="max-w-4xl mx-auto px-4 space-y-8">
 
       <header class="text-center stack-sm">
         <h1 class="heading-page">Add Workout</h1>
